===============
Stalker Changes
===============

0.2.6.4
=======

* **New:** Added a ``Task.review_set(review_number)`` method to get the desired
  set of reviews. It will return the latest set of reviews if ``review_number``
  is skipped or it is None.

0.2.6.3
=======

* **Fix:** Added ``Page`` to ``class_names`` in ``db.init()``.
* **Fix:** Fixed ``TimeLog`` tjp representation to use bot the ``start`` and
  ``end`` date values instead of the ``start`` and ``duration``. This is much
  better because it is independent from the timing resolution settings.

0.2.6.2
=======

* **Fix:** Fixed ``stalker.models.studio.schedule()`` method, and prevented it
  to call ``DBSession.commit()`` which causes errors if there is a transaction
  manager.
* **Fix:** Fixed ``stalker.models._parse_csv_file()`` method for empty
  computed resources list.

0.2.6.1
=======

* **New:** ``stalker.models.task.TimeLog`` instances are now checking if the
  dependency relation between the task that receives the time log and the tasks
  that the task depends to will be violated in terms of the start and end dates
  and raises a ``DependencyViolationError`` if it is the case.

0.2.6
=====

* **New:** Added ``stalker.models.wiki.Page`` class, for holding a per Project
  wiki.

0.2.5.5
=======

* **Fix:** ``Review.task`` attribute now accepts None but this is mainly done
  to allow its relation to the ``Task`` instance can be broken when it needs to
  be deleted without issuing a database commit.

0.2.5.4
=======

* **Update:** The following column names are updated:
  
  * ``Tasks._review_number`` to ``Tasks.review_number``
  * ``Tasks._schedule_seconds`` to ``Tasks.schedule_seconds``
  * ``Tasks._total_logged_seconds`` to ``Tasks.total_logged_seconds``
  * ``Reviews._review_number`` to ``Reviews.review_number``
  * ``Shots._cut_in`` to ``Shots.cut_in``
  * ``Shots._cut_out`` to ``Shots.cut_out``
  
  Also updated alembic migration to create columns with those names.
