@@ -3183,469 +3183,6 @@ class TaskStatusWorkflowTestCase(unittest2.TestCase):
         self.test_task3.status = self.status_drev
         self.assertRaises(StatusError, self.test_task3.resume)
 
-    # approve
-    # WFD
-    def test_approve_in_WFD_leaf_task(self):
-        """testing if a StatusError will be raised when the approve action is
-        used in a WFD leaf task
-        """
-        self.test_task3.status = self.status_wfd
-        self.assertRaises(StatusError, self.test_task3.approve)
-
-    # RTS
-    def test_approve_in_RTS_leaf_task(self):
-        """testing if a StatusError will be raised when the approve action is
-        used in a RTS leaf task
-        """
-        self.test_task3.status = self.status_rts
-        self.assertRaises(StatusError, self.test_task3.approve)
-
-    # WIP
-    def test_approve_in_WIP_leaf_task(self):
-        """testing if a StatusError will be raised when the approve action is
-        used in a WIP leaf task
-        """
-        self.test_task3.status = self.status_wip
-        self.assertRaises(StatusError, self.test_task3.approve)
-
-    # PREV: Status to CMPL
-    def test_approve_in_PREV_leaf_task_status_changed_to_CMPL(self):
-        """testing if the status will be set to CMPL when the approve action is
-        used in a PREV leaf task
-        """
-        now = datetime.datetime.now()
-        self.test_task3.create_time_log(
-            resource=self.test_task3.resources[0],
-            start=now,
-            end=now + datetime.timedelta(hours=1)
-        )
-        self.test_task3.request_review()
-        self.test_task3.approve()
-        self.assertEqual(self.test_task3.status, self.status_cmpl)
-
-    # PREV: Dependent task status updates WFD -> RTS
-    def test_approve_in_PREV_leaf_task_WFD_dependencies_are_updated_to_RTS(self):
-        """testing if the WFD dependency statuses are updated to RTS when the
-        approve action is used in a PREV leaf task
-        """
-        self.test_task3.status = self.status_rts
-        self.test_task9.status = self.status_rts
-        self.test_task9.depends = [self.test_task3]
-
-        now = datetime.datetime.now()
-        self.test_task3.create_time_log(
-            resource=self.test_task3.resources[0],
-            start=now,
-            end=now + datetime.timedelta(hours=1)
-        )
-        reviews = self.test_task3.request_review()
-        self.assertEqual(self.test_task3.status, self.status_prev)
-
-        self.test_task3.approve()
-        self.assertEqual(self.test_task3.status, self.status_cmpl)
-        self.assertEqual(self.test_task9.status, self.status_rts)
-
-    # PREV: Dependent task status updates DREV -> WIP
-    def test_approve_in_PREV_leaf_task_DREV_dependencies_are_updated_to_WIP(self):
-        """testing if the DREV dependency statuses are updated to WIP when the
-        approve action is used in a PREV leaf task
-        """
-        self.test_task3.status = self.status_rts
-        self.test_task9.status = self.status_rts
-        self.test_task9.depends = [self.test_task3]
-
-        # hack the status (not good actually, makes this test a half test)
-        self.test_task9.status = self.status_wip
-
-        # create time logs first
-        now = datetime.datetime.now()
-        self.test_task3.create_time_log(
-            resource=self.test_task3.resources[0],
-            start=now,
-            end=now + datetime.timedelta(hours=1)
-        )
-        reviews = self.test_task3.request_review()
-
-        self.test_task3.approve()
-
-        self.assertEqual(self.test_task3.status, self.status_cmpl)
-        self.assertEqual(self.test_task9.status, self.status_wip)
-
-    # PREV: Dependent task status updates other dependencies stay intact
-    def test_approve_in_PREV_leaf_task_other_dependency_statuses_are_intact(self):
-        """testing if the other dependency statuses will stay intact when the
-        approve action is used in a PREV leaf task
-        """
-        self.test_task3.status = self.status_rts
-        self.test_task9.status = self.status_rts
-        self.test_task5.depends = [self.test_task3]
-        self.test_task6.depends = [self.test_task3]
-        self.test_task8.depends = [self.test_task3]
-
-        self.test_task3.status = self.status_prev
-        self.test_task5.status = self.status_oh
-        self.test_task6.status = self.status_stop
-        self.test_task8.status = self.status_prev
-
-        self.test_task3.approve()
-        self.assertEqual(self.test_task5.status, self.status_oh)
-        self.assertEqual(self.test_task6.status, self.status_stop)
-        self.assertEqual(self.test_task8.status, self.status_prev)
-
-    # PREV: Parent task status updated
-    def test_approve_in_PREV_leaf_task_parent_status_updated_correctly(self):
-        """testing if the parent task status is updated correctly when the
-        approve action is used in a PREV leaf task
-        """
-        self.test_task9.depends = []
-
-        self.test_task9.status = self.status_rts
-        self.test_task1.status = self.status_wip
-        self.test_task7.status = self.status_wip
-        self.test_task8.status = self.status_wip
-        self.test_task2.status = self.status_wip
-
-        now = datetime.datetime.now()
-        self.test_task9.create_time_log(
-            resource=self.test_task9.resources[0],
-            start=now,
-            end=now + datetime.timedelta(hours=1)
-        )
-
-        reviews = self.test_task9.request_review()
-        self.assertEqual(self.test_task9.status, self.status_prev)
-
-        self.test_task9.approve()
-        self.assertEqual(self.test_task9.status, self.status_cmpl)
-        self.assertEqual(self.test_asset1.status, self.status_cmpl)
-        self.assertEqual(self.test_task7.status, self.status_cmpl)
-        self.assertEqual(self.test_task2.status, self.status_wip)
-
-    # PREV: Parents of dependent task statuses are updated
-    def test_approve_in_PREV_leaf_task_parents_of_dependent_task_statuses_updated_correctly(self):
-        """testing if the parents of dependent task statuses are updated
-        correctly when the approve action is used in a PREV leaf task
-        """
-        self.test_task9.depends = []
-        self.test_task6.depends = [self.test_task9]
-
-        self.test_task9.status = self.status_wip
-        self.test_asset1.status = self.status_wip
-        self.test_task7.status = self.status_wip
-        self.test_task8.status = self.status_wip
-        self.test_task2.status = self.status_wip
-
-        self.test_task4.status = self.status_wfd
-        self.test_task5.status = self.status_wfd
-        self.test_task6.status = self.status_wfd
-        self.test_asset1.status = self.status_wfd
-
-        now = datetime.datetime.now()
-        self.test_task9.create_time_log(
-            resource=self.test_task9.resources[0],
-            start=now,
-            end=now + datetime.timedelta(hours=1)
-        )
-        reviews = self.test_task9.request_review()
-        self.assertEqual(self.test_task9.status, self.status_prev)
-
-        self.test_task9.approve()
-        self.assertEqual(self.test_task9.status, self.status_cmpl)
-        self.assertEqual(self.test_asset1.status, self.status_cmpl)
-        self.assertEqual(self.test_task7.status, self.status_cmpl)
-        self.assertEqual(self.test_task2.status, self.status_wip)
-
-        self.assertEqual(self.test_task4.status, self.status_wfd)
-        self.assertEqual(self.test_task5.status, self.status_wfd)
-        self.assertEqual(self.test_task6.status, self.status_rts)
-        self.assertEqual(self.test_task1.status, self.status_rts)
-
-    # PREV
-    def test_approve_in_PREV_leaf_task_review_instance_statuses_updated_correctly(self):
-        """testing if the Review instances values are correctly updated to APP
-        when the approve action is used in a PREV leaf task
-        """
-        self.test_task3.status = self.status_wip
-
-        # create reviews automatically
-        reviews = self.test_task3.request_review()
-
-        # check the statuses
-        self.assertEqual(reviews[0].status.code, 'NEW')
-        self.assertEqual(reviews[1].status.code, 'NEW')
-
-        # approve all of them
-        self.test_task3.approve()
-
-        # now expect the statuses of the reviews to be all app
-        self.assertEqual(reviews[0].status.code, 'APP')
-        self.assertEqual(reviews[1].status.code, 'APP')
-
-    # HREV
-    def test_approve_in_HREV_leaf_task(self):
-        """testing if a StatusError will be raised when the approve action is
-        used in a HREV leaf task
-        """
-        self.test_task9.status = self.status_hrev
-        self.assertRaises(StatusError, self.test_task9.approve)
-
-    # DREV
-    def test_approve_in_DREV_leaf_task(self):
-        """testing if a StatusError will be raised when the approve action is
-        used in a DREV leaf task
-        """
-        self.test_task9.status = self.status_drev
-        self.assertRaises(StatusError, self.test_task9.approve)
-
-    # OH
-    def test_approve_in_OH_leaf_task(self):
-        """testing if a StatusError will be raised when the approve action is
-        used in a OH leaf task
-        """
-        self.test_task9.status = self.status_oh
-        self.assertRaises(StatusError, self.test_task9.approve)
-
-    # STOP
-    def test_approve_in_STOP_leaf_task(self):
-        """testing if a StatusError will be raised when the approve action is
-        used in a STOP leaf task
-        """
-        self.test_task9.status = self.status_stop
-        self.assertRaises(StatusError, self.test_task9.approve)
-
-    # CMPL
-    def test_approve_in_CMPL_leaf_task(self):
-        """testing if a StatusError will be raised when the approve action is
-        used in a CMPL leaf task
-        """
-        self.test_task9.status = self.status_cmpl
-        self.assertRaises(StatusError, self.test_task9.approve)
-
-    def test_approve_will_create_new_review_instance(self):
-        """testing if approve method will return a new Review instance
-        """
-        self.test_task3.status = self.status_wip
-
-        # create reviews automatically
-        reviews = self.test_task3.request_review()
-
-        # check the statuses
-        self.assertEqual(reviews[0].status.code, 'NEW')
-        self.assertEqual(reviews[1].status.code, 'NEW')
-
-        # approve reviews
-        new_review = self.test_task3.approve(
-            reviewer=self.test_user1,
-            description='Test Review'
-        )
-        self.assertIsInstance(new_review, Review)
-
-    def test_approve_will_create_new_review_instance_with_correct_review_number(self):
-        """testing if approve method will return a new Review instance with
-        correct review number
-        """
-        self.test_task3.status = self.status_wip
-
-        # create reviews automatically
-        reviews = self.test_task3.request_review()
-
-        # check the statuses
-        self.assertEqual(reviews[0].status.code, 'NEW')
-        self.assertEqual(reviews[1].status.code, 'NEW')
-
-        # approve reviews
-        new_review = self.test_task3.approve(
-            reviewer=self.test_user1,
-            description='Test Review'
-        )
-        self.assertIsInstance(new_review, Review)
-        self.assertEqual(
-            self.task.review_number,
-            new_review.review_number
-        )
-
-    def test_approve_will_remove_other_new_reviews(self):
-        """testing if approve method will remove other NEW Review instances in
-        the task.reviews
-        """
-        self.test_task3.status = self.status_wip
-
-        # create reviews automatically
-        reviews = self.test_task3.request_review()
-
-        # check the statuses
-        self.assertEqual(reviews[0].status.code, 'NEW')
-        self.assertEqual(reviews[1].status.code, 'NEW')
-
-        # approve reviews
-        new_review = self.test_task3.approve(
-            reviewer=self.test_user1,
-            description='Test Review'
-        )
-        self.assertIsInstance(new_review, Review)
-
-        # other reviews are not in task.reviews any more
-        self.assertNotIn(
-            reviews[0],
-            self.test_task3.reviews
-        )
-        self.assertNotIn(
-            reviews[1],
-            self.test_task3.reviews
-        )
-
-        # now expect the statuses of the reviews to be all app
-        self.assertEqual(reviews[0].task, None)
-        self.assertEqual(reviews[1].task, None)
-
-    def test_approve_will_not_remove_other_app_reviews(self):
-        """testing if approve method will not remove other APP Review instances
-        in the task.reviews
-        """
-        self.test_task3.status = self.status_wip
-
-        # create reviews automatically
-        reviews = self.test_task3.request_review()
-
-        # check the statuses
-        self.assertEqual(reviews[0].status.code, 'NEW')
-        self.assertEqual(reviews[1].status.code, 'NEW')
-
-        # approve one of them
-        reviews[0].approve()
-
-        # approve reviews
-        new_review = self.test_task3.approve(
-            reviewer=self.test_user1,
-            description='Test Review'
-        )
-        self.assertIsInstance(new_review, Review)
-
-        # other reviews are not in task.reviews any more
-        self.assertNotIn(
-            reviews[0],
-            self.test_task3.reviews
-        )
-        self.assertNotIn(
-            reviews[1],
-            self.test_task3.reviews
-        )
-
-        # now expect the statuses of the reviews to be all app
-        self.assertEqual(reviews[0].task, None)
-        self.assertEqual(reviews[1].task, None)
-
-    def test_approve_will_not_remove_other_rrev_reviews(self):
-        """testing if approve method will not remove other RREV Review
-        instances in the task.reviews
-        """
-        self.test_task3.status = self.status_wip
-
-        # create reviews automatically
-        reviews = self.test_task3.request_review()
-
-        # check the statuses
-        self.assertEqual(reviews[0].status.code, 'NEW')
-        self.assertEqual(reviews[1].status.code, 'NEW')
-
-        # rrev one of them
-        reviews[0].request_revision()
-
-        # approve reviews
-        new_review = self.test_task3.approve(
-            reviewer=self.test_user1,
-            description='Test Review'
-        )
-        self.assertIsInstance(new_review, Review)
-
-        # other reviews are not in task.reviews any more
-        self.assertNotIn(
-            reviews[0],
-            self.test_task3.reviews
-        )
-        self.assertNotIn(
-            reviews[1],
-            self.test_task3.reviews
-        )
-
-        # now expect the statuses of the reviews to be all app
-        self.assertEqual(reviews[0].task, None)
-        self.assertEqual(reviews[1].task, None)
-
-    def test_approve_will_not_change_previous_reviews(self):
-        """testing if approve method will not change previous Review instances
-        in the task.reviews
-        """
-        self.test_task3.status = self.status_wip
-
-        # create reviews automatically
-        reviews = self.test_task3.request_review()
-
-        # check the statuses
-        self.assertEqual(reviews[0].status.code, 'NEW')
-        self.assertEqual(reviews[1].status.code, 'NEW')
-
-        # finilize them by requesting a review
-        reviews[0].request_revision()
-        reviews[1].approve()
-
-        # check review statuses
-        self.assertEqual(
-            self.status_rrev,
-            reviews[0].status
-        )
-        self.assertEqual(
-            self.status_app,
-            reviews[1].status
-        )
-
-        # re set the task status to wip
-        self.test_task3.status = self.status_wip
-
-        # re request a new review set
-        reviews2 = self.test_task3.request_review()
-
-        # now while one of them is app
-        reviews2[0].approve()
-        # and the other is new
-        self.assertEqual(reviews2[1].status, self.status_new)
-
-        # use task.approve
-        new_review = self.test_task3.approve(
-            reviewer=self.test_user1,
-            description='Test Review'
-        )
-        self.assertIsInstance(new_review, Review)
-
-        # check if reviews2[1] is not in task.reviews any more
-        self.assertIn(
-            reviews[0],
-            self.test_task3.reviews
-        )
-        self.assertIn(
-            reviews[1],
-            self.test_task3.reviews
-        )
-
-        self.assertIn(
-            reviews2[0],
-            self.test_task3.reviews
-        )
-        self.assertNotIn(
-            reviews2[1],
-            self.test_task3.reviews
-        )
-
-        # and the statuses are not changed
-        self.assertEqual(
-            self.status_rrev,
-            reviews[0].status
-        )
-        self.assertEqual(
-            self.status_app,
-            reviews[1].status
-        )
-
     def test_review_set_review_number_is_skipped(self):
         """testing if the latest review set will be returned if the
         review_number argument is skipped in Task.review_set() method
